# challenge123

./: CMakeLists.txt  README.md  prj.conf
ai/: train_models.py
include/: vitalink.h
scripts/: backend.py  upload_data.py
src/: main.c
src/ai/: edge_ai.c  edge_ai.h
src/alert/: alert_manager.c  alert_manager.h
src/comm/: secure_comm.c  secure_comm.h
src/digital_twin/: dt_sync.c  dt_sync.h
src/power/: power_mgmt.c  power_mgmt.h
src/sensors/: sensor_driver.c  sensor_driver.h
src/storage/: storage.c  storage.h
